Just got access to Marco index, slight modifications to IR